remove php end tags, remove at symbol in template, add example of class handlers, remove useless files
git-svn-id: http://piwigo.org/svn/extensions/skeleton/trunk@24182 68402e56-0260-453c-a942-63ccdbb3a9ee

--- a/template/style.css
+++ b/template/style.css
@@ -18,6 +18,7 @@
   -moz-transform:rotate(5deg);
   -webkit-transform:rotate(5deg);
   -o-transform:rotate(5deg);
+  transform:rotate(5deg);
   letter-spacing:10px;
   box-shadow:10px 10px 10px rgba(0,0,0,0.5);
   cursor:pointer;
@@ -26,4 +27,5 @@
   -moz-transform:rotate(175deg);
   -webkit-transform:rotate(175deg);
   -o-transform:rotate(175deg);
+  transform:rotate(175deg);
 }
